k8s/openebs/ns.yaml
apiVersion: v1
kind: Namespace
metadata: 
  labels:
    kubernetes.io/metadata.name: openebs
    pod-security.kubernetes.io/audit: privileged
    pod-security.kubernetes.io/enforce: privileged
    pod-security.kubernetes.io/warn: privileged
    name: openebs
  name: openebs
