k8s/openebs/webhook.yaml
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingWebhookConfiguration
metadata:
  creationTimestamp: "2025-02-28T11:30:34Z"
  generation: 1
  labels:
    app: cstor-admission-webhook
    openebs.io/component-name: cstor-admission-webhook
    openebs.io/version: 3.6.0
  name: openebs-cstor-validation-webhook
  ownerReferences:
  - apiVersion: apps/v1
    blockOwnerDeletion: true
    controller: true
    kind: Deployment
    name: openebs-cstor-admission-server
    uid: 88829b47-6832-40b0-938a-bc84ab9e5f1f
  resourceVersion: "2630"
  uid: 5e662eb1-ea2e-41a9-8e96-864b9f8a84a4
webhooks:
- admissionReviewVersions:
  - v1
  clientConfig:
    caBundle: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSURRekNDQWl1Z0F3SUJBZ0lCQURBTkJna3Foa2lHOXcwQkFRc0ZBREFzTVNvd0tBWURWUVFERXlGdmNHVnUKWldKekxXTnpkRzl5TFdGa2JXbHpjMmx2YmkxelpYSjJaWEl0WTJFd0hoY05NalV3TWpJNE1URXpNRE13V2hjTgpNelV3TWpJMk1URXpNRE13V2pBc01Tb3dLQVlEVlFRREV5RnZjR1Z1WldKekxXTnpkRzl5TFdGa2JXbHpjMmx2CmJpMXpaWEoyWlhJdFkyRXdnZ0VpTUEwR0NTcUdTSWIzRFFFQkFRVUFBNElCRHdBd2dnRUtBb0lCQVFDZnQybW8KM0ZtbHlXVEs3azMwR3BKSGJrdld2TzZGTFgvY3dRQnhIMjZrMTEwTGVuanFQT1V0SVpCNDNkRnpqTUNTakpicwpqZUpGZk1TVWszV0 [...]
    service:
      name: openebs-cstor-admission-server
      namespace: openebs
      path: /validate
      port: 443
  failurePolicy: Ignore
  matchPolicy: Equivalent
  name: admission-webhook.cstor.openebs.io
  namespaceSelector: {}
  objectSelector: {}
  rules:
  - apiGroups:
    - '*'
    apiVersions:
    - '*'
    operations:
    - CREATE
    - DELETE
    resources:
    - persistentvolumeclaims
    scope: '*'
  - apiGroups:
    - cstor.openebs.io
    apiVersions:
    - v1
    operations:
    - CREATE
    - UPDATE
    - DELETE
    resources:
    - cstorpoolclusters
    scope: '*'
  - apiGroups:
    - cstor.openebs.io
    apiVersions:
    - v1
    operations:
    - UPDATE
    resources:
    - cstorvolumeconfigs
    scope: '*'
  - apiGroups:
    - '*'
    apiVersions:
    - '*'
    operations:
    - DELETE
    resources:
    - namespaces
    scope: '*'
  sideEffects: None
  timeoutSeconds: 5
